# New-PMS

./: .env.example  .eslintrc.js  .gitignore  EVOLUTION_API_SERVICE_GUIDE.md  FRAGMENTED_MESSAGES_GUIDE.md  README.md  TRACING_GUIDE.md  agents.py  checkpoint_manager.py  database.py  env_template.txt  evolution_api_service.py  install.bat  install.sh  lara_agent.py  lara_prompt_corrected.sql  lara_prompt_fixed.sql  lara_prompt_use_automatic_data.sql  main.py  message_buffer_service.py  mike_agent.py  mike_prompt_corrected.sql  models.py  package.json  prompts_optimized.sql  pyproject.toml  rag_service.py  requirements.txt  run.py  setup_agent_configurations.sql  state_manager.py  supervisor_agent.py  supervisor_prompt_corrected.sql  supervisor_prompt_final.sql  supervisor_prompt_force_routing.sql  supervisor_prompt_no_interference.sql  test_agents.py  test_fragmented_messages.py  test_simple_supervisor.py  test_supervisor_debug.py  (+5 more)
.agents/: .skill-lock.json  .skill-lock.json.backup
.claude/agents/: builder.md  evaluator.md  planner.md
.claude/skills/best-practices/: .skill-meta.json
.claude/skills/codenavi/: .skill-meta.json
.claude/skills/coding-guidelines/: .skill-meta.json
.claude/skills/create-rfc/: .skill-meta.json
.claude/skills/nestjs-modular-monolith/: .skill-meta.json
.claude/skills/security-best-practices/: .skill-meta.json
.claude/skills/technical-design-doc-creator/: .skill-meta.json
.claude/skills/tlc-spec-driven/: .skill-meta.json
.claude/skills/web-quality-audit/: .skill-meta.json
.cursor/rules/: langgraf.mdc  langgraph2.mdc
.specs/features/: project-init.md
.specs/features/project-bootstrap/: spec.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
docs/: product-study.md
src/: app.module.ts  main.ts
src/config/: configuration.ts
src/modules/channel-manager/: channel-manager.module.ts
src/modules/cleaning/: cleaning.module.ts
src/modules/financials/: financials.module.ts
src/modules/guests/: guests.module.ts
src/modules/owner-alerts/: owner-alerts.module.ts
src/modules/reservations/: reservations.module.ts
supabase/migrations/: 001_initial_schema.sql
(+1 files in other folders)
